Fix alignment and design issues

--- a/src/app/pages/game-board/game-board.component.scss
+++ b/src/app/pages/game-board/game-board.component.scss
@@ -139,12 +139,16 @@ img {
   overflow-x: auto;
   .puzzle-piece {
     background-size: cover;
+    max-width: 100px;
     min-width: 100px;
+    max-height: 100px;
     min-height: 100px;
     margin: 0 2px;
     cursor: move;
     &.remove-spacing {
       margin: 0;
+      min-width: auto;
+      min-height: auto;
     }
   }
 }
@@ -162,6 +166,7 @@ img {
   align-items: center;
   .image-container {
     display: flex;
+    min-width: 400px;
     max-width: 400px;
     width: 100%;
     border: 1px var(--color-white) solid;
@@ -170,7 +175,8 @@ img {
   .board {
     display: flex;
     flex-wrap: wrap;
-    width: 400px;
+    min-width: 400px;
+    max-width: 400px;
     border: 1px solid var(--color-white);
     .dropzone {
       flex: 0 0 25%;
